@@ -34,9 +34,15 @@
   <hr>
 
   <div class="container">
-    <p>Let's you edit the selected <a href="qrc:/resources/help/editor/resources/resource_help.html">Resource's</a>
+    <p>Lets you edit the selected <a href="qrc:/resources/help/editor/resources/resource_help.html">Resource's</a>
     tags. To edit the tag's description, edit the describtion field after entering a tag.
     To confirm a tag or tag-changes press enter.</p>
+
+    <br>
+
+    <p>Entering a tag with a colon (":") will set the type of the tag to whatever is to the left of the colon.<br>
+    e.g: atrist:me will set the tag type to be "artist"
+    </p>
 
     <br>
 
